--- a/app/service/project_info/requirements.txt
+++ b/app/service/project_info/requirements.txt
@@ -1,9 +1,8 @@
-google-cloud-resource-manager
-google-cloud-bigquery
-google-auth
-protobuf
-google-cloud-monitoring
-functions_framework
-pytest
-pytest-mock
-google-cloud-logging
+functions_framework>=3.8.2
+google-cloud-resource-manager==1.14.1
+google-cloud-bigquery>=3.30.0
+google-cloud-logging>=3.11.4
+google-cloud-monitoring>=2.27.0
+protobuf>=5.29.3
+#pytest>=8.3.5
+#pytest-mock>=3.14.0
